--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,29 +1,24 @@
-name: C/C++ CI
+name: Release cert_fingerprint
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
   release:
     types: [published]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Make configure executable
-      run: chmod +x configure
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
-    - name: Upload binary to GitHub release
-      uses: softprops/action-gh-release@v2
-      with:
-         files: cert_fingerprint
-      env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v3
+
+      - name: Install build dependencies
+        run: sudo apt-get update && sudo apt-get install -y build-essential libssl-dev
+
+      - name: Build
+        run: make
+
+      - name: Upload binary
+        uses: softprops/action-gh-release@v2
+        with:
+          files: cert_fingerprint
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
